extended set of supported file extensions